--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer utilities {
+  .custom-button {
+    @apply bg-red-600 text-white text-lg font-bold grid place-content-center;
+  }
+}
